<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SummaryFragment">

    <data>

        <variable
            name="viewModel"
            type="com.bignerdranch.android.myinterview.model.InterviewViewModel" />

        <variable
            name="summaryFragment"
            type="com.bignerdranch.android.myinterview.SummaryFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/side_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/quantity_label"
                    style="@style/Widget.MyInterview.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_taken"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/quantity"
                    style="@style/Widget.MyInterview.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/order_summary_margin"
                    android:text="@{viewModel.date.toString()}"
                    tools:text="10/28/2021" />

                <View
                    android:id="@+id/divider1"
                    style="@style/Widget.MyInterview.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/side_margin"
                    android:layout_marginBottom="@dimen/side_margin" />

                <TextView
                    android:id="@+id/flavor_label"
                    style="@style/Widget.MyInterview.TextView.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_one"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/flavor_label1"
                    style="@style/Widget.MyInterview.TextView.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/question_one_prompt" />

                <TextView
                    android:id="@+id/questionOneAnswer"
                    style="@style/Widget.MyInterview.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/order_summary_margin"
                    android:text="@string/your_answer_one"
                    tools:text="Vocal" />

                <View
                    android:id="@+id/divider2"
                    style="@style/Widget.MyInterview.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/side_margin"
                    android:layout_marginBottom="@dimen/side_margin" />

                <TextView
                    android:id="@+id/pickup_label"
                    style="@style/Widget.MyInterview.TextView.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/pickup_label1"
                    style="@style/Widget.MyInterview.TextView.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/question_two_prompt"/>

                <TextView
                    android:id="@+id/date"
                    style="@style/Widget.MyInterview.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:layout_marginTop="@dimen/order_summary_margin"
                    android:text="@string/your_answer_two"
                    android:textStyle="bold"
                    tools:text="Vocal" />


                <View
                    android:id="@+id/divider3"
                    style="@style/Widget.MyInterview.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/side_margin"
                    android:layout_marginBottom="@dimen/margin_between_elements" />

                <TextView
                    android:id="@+id/total"
                    style="@style/Widget.MyInterview.TextView.FinalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/side_margin"
                    android:text="@{@string/total_question(viewModel.numberOfQuestions)}"
                    tools:text="Total question: 2" />

            </LinearLayout>

            <Button
                android:id="@+id/send_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:textColor="@color/white"
                android:onClick="@{() -> summaryFragment.sendOrder()}"
                android:text="@string/send" />

            <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:textColor="@color/red"
                android:onClick="@{() -> summaryFragment.cancelOrder()}"
                android:text="@string/cancel" />

        </LinearLayout>
    </ScrollView>
</layout>