<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">
    <fragment
        android:id="@+id/startFragment"
        android:name="com.bignerdranch.android.myinterview.StartFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_start" >
        <action
            android:id="@+id/action_startFragment_to_interviewFragment"
            app:destination="@id/interviewFragment" />
    </fragment>
    <fragment
        android:id="@+id/interviewFragment"
        android:name="com.bignerdranch.android.myinterview.InterviewFragment"
        android:label="@string/question_one"
        tools:layout="@layout/fragment_interview" >
        <action
            android:id="@+id/action_flavorFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_interviewFragment_to_summaryFragment"
            app:destination="@id/summaryFragment" />
    </fragment>
    <fragment
        android:id="@+id/summaryFragment"
        android:name="com.bignerdranch.android.myinterview.SummaryFragment"
        android:label="@string/interview_summary"
        tools:layout="@layout/fragment_summary" >
        <action
            android:id="@+id/action_summaryFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>