<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InterviewFragment">

    <data>
        <variable
            name="viewModel"
            type="com.bignerdranch.android.myinterview.model.InterviewViewModel" />

        <variable
            name="oneFragment"
            type="com.bignerdranch.android.myinterview.InterviewFragment" />
    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/questionOne"
                style="@style/Widget.MyInterview.TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#80000000"
                android:padding="16dp"
                android:text="@string/question_one"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/questionOnePrompt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Question 1" />

            <TextView
                android:id="@+id/questionOnePrompt"
                style="@style/Widget.MyInterview.TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#80000000"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp"
                android:text="@string/question_one_prompt"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionOne" />


            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                android:onClick="@{() -> oneFragment.cancelInterview()}"
                android:text="@string/cancel"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <Button
                android:id="@+id/btnNextQuestion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:onClick="@{() -> oneFragment.goToNextQuestion()}"
                android:text="@string/next_question"
                android:textColor="@color/white"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btnFinish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:onClick="@{() -> oneFragment.finishInterview()}"
                android:text="@string/finish"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>

                <androidx.camera.view.PreviewView
                    android:id="@+id/viewFinder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:translationZ="-1dp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                </androidx.camera.view.PreviewView>

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>